# university-dining-app

./: README.md  docker-compose-test.yaml  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/backend/: app.py  db_types.py  extensions.py
backend/backend/api/: __init__.py  auth.py  locations.py  menu.py  user.py
backend/tests/: conftest.py  test_locations.py  test_menu.py  test_user.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/e2e/tests/: auth.test.js  dishItem.test.js
frontend/playwright-report/: index.html
frontend/public/: index.html
frontend/src/: App.css
frontend/src/Components/: DishItem.js  Events.js  FSI.js  FoodInfoModal.js  Home.js  Jobs.js  Main.js  MealPlan.js  Menu.js  MenuAPI.js  MenuBar.js  Nutrition.js  NutritionLabel.js  Preferences.js  RatingModal.js  ReviewsModal.js  Sustainability.js  UserNav.js  fetchRecDishes.js
frontend/src/DataContext/: AuthDataContext.js
